# serum-render

./: .gitignore  KNOWN_ISSUES.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: decisions.md  determinism-probe-2026-07-16.json  implementation.md
scripts/: probe_determinism.py  verify_dawdreamer.py  verify_dawdreamer_serum2.py
serum_render/: __init__.py  api.py  cli.py  config.py  discover.py  engine.py  formats.py  isolated.py  jobs.py  output.py  pool.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_engine.py  test_filename.py  test_isolated.py  test_jobs.py  test_midi.py  test_output.py  test_presets.py  test_sanitize.py  test_serum1_smoke.py  test_serum2_smoke.py
